# lightrt-srv

./: .gitignore  CLAUDE.md  README.md  SPEC.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/litert/tunnel/: MainActivity.kt  TunnelApplication.kt
app/src/main/java/com/litert/tunnel/client/: ChatClient.kt
app/src/main/java/com/litert/tunnel/download/: ModelDownloader.kt
app/src/main/java/com/litert/tunnel/engine/: EngineMetrics.kt  EngineSettings.kt  GgufEngine.kt  InferenceEngine.kt  InferenceEngineFactory.kt  LiteRTEngine.kt  LlamaJni.kt  ResourceMonitor.kt
app/src/main/java/com/litert/tunnel/repository/: SettingsRepository.kt  TunnelRepository.kt
app/src/main/java/com/litert/tunnel/server/: ApiModels.kt  TunnelServer.kt
app/src/main/java/com/litert/tunnel/service/: TunnelService.kt
app/src/main/java/com/litert/tunnel/ui/: MainViewModel.kt
app/src/main/java/com/litert/tunnel/ui/screen/: ChatScreen.kt  ModelsScreen.kt  MonitorScreen.kt  ServerScreen.kt
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/litert/tunnel/: ChatClientTest.kt  ChatMessageTest.kt  GgufEngineTest.kt  InferenceEngineFactoryTest.kt  ModelDownloaderTest.kt  TunnelRepositoryTest.kt  TunnelServerTest.kt
docs/: architecture.md  development.md  llama-cpp-android-build.md
examples/: agent.py  chat.py  test_agent.py
(+2 files in other folders)
